[project]
name = "pure-mcp-server"
version = "0.1.0"
description = "A MCP server to retrieve information from a Pure Storage FlashBlade array"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.2.0",]
[[project.authors]]
name = "JB Thomas"
email = "jthomas@purestorage.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
pure-mcp-server = "pure-mcp-server:main"
